:END:

* Changelog
:PROPERTIES:
:ID:                     e08b1bd9-0803-4266-9049-36a8174b999e
:END:

** TBD
:PROPERTIES:
:ID:                     70359835-aff8-4cb6-92bd-ac857225a3d5
:END:

*Features*

- [[https://github.com/d12frosted/vino/issues/55][vino#55]] Provide =vino-sources-fn= variable to allow completion of sources
  when acquiring a wine.

** v0.3.0
:PROPERTIES:
:ID:                     81df6136-0ec8-415d-9350-279b22629fef
:END:

Primarily migration to =org-roam= v2 that has many improvements and breaking
changes. See [[https://org-roam.discourse.group/t/the-org-roam-v2-great-migration/1505][The Org-roam v2 Great Migration]] for more information on automatic
migration. There will be a separate script to migrate all =vino= entries.

*Features*

- Faster database updates via =vino-db-update-file=, which is called
  automatically on buffer save. Also, since =org-roam= has changed the way
  database is built, =vino= doesn't advice/hook into =org-roam= database build
  process, but instead provides a separate pipeline similar to one in
  =org-roam=. See relevant section of README for more information.

*Breaking changes*

- Since =org-roam= doesn't provide tagging functionality anymore, there is no
  built-in way to use directories as tags, so each file must contain a
  =#+filetags= value. Newly created notes will get this automatically, old notes
  must be migrated.
- Template system has adapted to latest =vulpea-create= and =org-roam=. Most
  importantly, instead of being a full blown template accepted by
  =vulpea-create= it is now a property list simply allowing only values that
  make sense:
  - =:file-name= (mandatory) - file name relative to =org-roam-directory=;
  - =:head= (optional) - extra header of the created note;
  - =:body= (optional) - body of the created note;
  - =:context= (optional) - extra variables for =:file-name=, =:head=, =:body=
    templates.
  - =:properties= (optional) - extra properties to put into =PROPERTIES= block;